# JeremySNR

./: README.md
vintage-gibson-pricing/: .gitignore  DEALER_POLICY.md  Dockerfile  MODEL_CARD.md  README.md  pyproject.toml
vintage-gibson-pricing/app/: market_tab.py  streamlit_app.py
vintage-gibson-pricing/data/seed/: gibson_acoustic_seed.csv  price_ranges.yaml  synthetic_augmentation_rules.yaml
vintage-gibson-pricing/notebooks/: 01_eda_and_features.ipynb  02_model_and_shap.ipynb
vintage-gibson-pricing/reports/: eval.html
vintage-gibson-pricing/scripts/: build_seed.py  ingest.py  run_all_ingest.py  train.py
vintage-gibson-pricing/src/gibson_price/: __init__.py  schema.py
vintage-gibson-pricing/src/gibson_price/features/: build.py  condition.py  gibson_serial.py  originality.py  tonewood.py
vintage-gibson-pricing/src/gibson_price/ingest/: base.py  common_crawl.py  dealer_archive.py  heritage_scraper.py  jsonld.py  reverb_api.py  reverb_scraper.py  sitemap.py  title_parser.py  vg_price_guide.py  wayback.py
vintage-gibson-pricing/src/gibson_price/ingest/dealers/: generic.py  registry.py  shopify.py
vintage-gibson-pricing/src/gibson_price/ingest/dealers/custom/: elderly.py  (+3 more)
vintage-gibson-pricing/src/gibson_price/models/: comps.py  conformal.py  explainer.py  forecast.py  gbm.py  hierarchical.py  index.py  macro.py  predict.py  train.py
vintage-gibson-pricing/tests/: test_features.py  test_forecast_pipeline.py  test_jsonld.py  test_model.py  test_serial_dating.py  test_sitemap_and_cc.py  test_structural_mods.py  test_title_parser.py  test_wayback.py
(+5 files in other folders)
