[project]
name = "gibson-price"
version = "0.1.0"
description = "Vintage acoustic guitar pricing predictor with Gibson focus. Hedonic gradient boosting + conformalized prediction intervals + Bayesian hierarchical pooling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeremy Smith" }]
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "shap>=0.45",
    "mapie>=0.8",
    "pyyaml>=6.0",
    "requests>=2.31",
    "requests-cache>=1.2",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
hierarchical = [
    "bambi>=0.13",
    "pymc>=5.10",
    "arviz>=0.17",
]
app = [
    "streamlit>=1.32",
    "altair>=5.2",
    "plotly>=5.19",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gibson_price"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
